fix display issue in windows for calendar.

--- a/client/src/core/orders/ordersForm/ordersForm.html
+++ b/client/src/core/orders/ordersForm/ordersForm.html
@@ -8,7 +8,7 @@
         </h1>
         <div flex></div>
         <md-button
-            ng-disabled="!$ctrl.validateTime()"
+            ng-disabled="!$ctrl.validateForm()"
             ng-click="$ctrl.submitOrder()" class="md-primary md-raised">
             submit
         </md-button>
