minor fix for order form validate and init

--- a/client/src/core/Calendar/Calendar.html
+++ b/client/src/core/Calendar/Calendar.html
@@ -17,8 +17,7 @@
                 </md-input-container>
             </md-menu-item> -->
             <md-menu-item layout="row" layout-align="center center">
-                {{$ctrl.selected.customers[0].firstName}}
-                    {{$ctrl.selected.customers[0].lastName}}
+                {{$ctrl.selected.customers[0].firstname}} {{$ctrl.selected.customers[0].lastname}}
             </md-menu-item>
             <md-menu-item layout="row" layout-align="center center">
                 {{$ctrl.selected.customers[0].phone | tel}}
