fix order form layout

--- a/client/src/core/orders/ordersForm/ordersForm.html
+++ b/client/src/core/orders/ordersForm/ordersForm.html
@@ -13,9 +13,8 @@
         </md-button>
     </div> -->
     <div class="" layout="row" flex>
-        <calendar goto-date="$ctrl.order.scheduleAt" on-update="$ctrl.updateDate(date)" default-view="month" select-date="true" select-event="false"
-            layout="column" flex="80"></calendar>
-        <div class="" layout="column">
+        <calendar goto-date="$ctrl.order.scheduleAt" on-update="$ctrl.updateDate(date)" default-view="month" select-date="true" select-event="false" layout="column" flex="80"></calendar>
+        <md-content class="" layout="column">
             <div class="" layout="row" flex="none">
                 <md-button ng-click="$ctrl.setOrder()" class="md-raised">reset</md-button>
                 <div flex></div>
@@ -25,16 +24,15 @@
             </div>
             <md-divider></md-divider>
             <div class="schedule-at-date" layout="column" layout-align="center center">
-                <h3 ng-show="$ctrl.order.scheduleAt">
+                <h4 ng-show="$ctrl.order.scheduleAt">
                     <!-- {{$ctrl.order.scheduleAt | date:'EEEE h:mma @ MMMM d, y'}} -->
                     {{$ctrl.order.scheduleAt | date:'EEEE h:mma'}}
-                </h3>
-                <h3 ng-show="$ctrl.order.scheduleAt">
+                </h4>
+                <h4 ng-show="$ctrl.order.scheduleAt">
                     {{$ctrl.order.scheduleAt | date:'MMMM d, y'}}
-                </h3>
+                </h4>
             </div>
-            <time-date-picker ng-model="$ctrl.order.scheduleAt" display-mode="full" default-date="$ctrl.defaultDate" mindate="{{$ctrl.scheduleDate.min}}"
-                maxdate="{{$ctrl.scheduleDate.max}}" autosave>
+            <time-date-picker ng-model="$ctrl.order.scheduleAt" display-mode="full" default-date="$ctrl.defaultDate" mindate="{{$ctrl.scheduleDate.min}}" maxdate="{{$ctrl.scheduleDate.max}}" autosave>
             </time-date-picker>
             <md-content layout="column" class="pet-select">
                 <md-subheader>Customer</md-subheader>
@@ -51,7 +49,7 @@
             <md-content layout="column" class="pet-select" flex>
                 <md-subheader>Pets</md-subheader>
                 <div class="customer-field">
-                    <div layout="row" ng-repeat="pet in $ctrl.pets" ng-click="($ctrl.pets.length>1)?($ctrl.candidates[pet._id] = !$ctrl.candidates[pet._id]):false">
+                    <div layout="row" ng-repeat="pet in $ctrl.pets">
                         <md-checkbox ng-model="$ctrl.candidates[pet._id]" aria-label="include-{{pet._id}}">
                             <strong>{{pet.name}}</strong>
                         </md-checkbox>
@@ -63,9 +61,7 @@
                     <label>Service</label>
                     <md-select ng-model="$ctrl.order.services">
                         <md-option><em>None</em></md-option>
-                        <md-option ng-repeat="service in $ctrl.services"
-                            ng-show="service.isActivated && !service.isDeleted" 
-                            ng-value="service" ng-disabled="$index === 1">
+                        <md-option ng-repeat="service in $ctrl.services" ng-show="service.isActivated && !service.isDeleted" ng-value="service" ng-disabled="$index === 1">
                             {{service.name}} {{service.zhName}} {{service.price | currency}}
                         </md-option>
                     </md-select>
@@ -75,10 +71,7 @@
                 <label>Notes</label>
                 <textarea ng-model="$ctrl.order.notes" md-maxlength="150" rows="3" md-select-on-focus></textarea>
             </md-input-container> -->
-        </div>
+        </md-content>
     </div>
-    <!-- <div class="" layout="row" flex="none" layout-align="center">
-        <day-schedule orders="$ctrl.selectedDateOrders">
-        </day-schedule>
-    </div> -->
-    </md-content\>
+
+</md-content>
